implement editing nodes
